objects/Impl_Revision__c.object
<CustomObject>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Case_Id__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Case_Id__r.Account.Name), &apos;&apos;, HYPERLINK(Implementation_Case_Id__r.Account.Id, Implementation_Case_Id__r.Account.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Implementation_Case_Id__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Impl_Case_status__c</fullName>
        <formula>TEXT(Implementation_Case_Id__r.Implementation_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Impl Case status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CreatedUserProfile__c</fullName>
        <formula>IF(OR(Contains(CreatedBy.ProfileName__c,&apos;Sales&apos;),Contains(CreatedBy.ProfileName__c,&apos;Specialty&apos;)),&apos;Sales&apos; ,IF(Contains(CreatedBy.ProfileName__c,&apos;Implementations&apos;),&apos;Imps&apos;,&apos;Others&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_name__c</fullName>
        <formula>Implementation_Case_Id__r.Group_nameRev__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impl_Case_Status__c</fullName>
        <formula>IF(ISPICKVAL(Implementation_Case_Id__r.Implementation_Status__c,&apos;Approved&apos;),&apos;Approved Implementation In Progress&apos;,TEXT(Implementation_Case_Id__r.Implementation_Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Id__c</fullName>
        <label>Implementation_Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Revisions</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Text(Implementation_Case_Id__r.Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Imp_Type__c</fullName>
        <formula>TEXT(Implementation_Case_Id__r.Pre_Implementation_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre Imp Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>TEXT(Implementation_Case_Id__r.Implementation_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <inlineHelpText>If This Is A Renewal In Which The Client Changes Are Not All Finalized,And Expected To Have Future Revisions,Then It Is A Pre Renewal.If This Is A Renewal In Which The Client Changes Are Finalized, And Not Expecting Any Revisions It Is A Finalized Renewal</inlineHelpText>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Renewal</fullName>
                </value>
                <value>
                    <fullName>Finalized Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <inlineHelpText>Select Pre-renewal if all requirements for renewal haven’t been finalized but there is a component of the renewal that will take longer to implement &amp; therefore needs to be submitted early.</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Renewal</fullName>
                </value>
                <value>
                    <fullName>Renewal Finalized</fullName>
                </value>
                <value>
                    <fullName>SBC Pre-Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denied – New Implementation Case Submission Required</fullName>
                </value>
                <value>
                    <fullName>Denied – Revision Cannot be Processed</fullName>
                </value>
                <value>
                    <fullName>Pending - More Information Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Record_Status__c</fullName>
        <label>Revision Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Initiated/In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Response From Sales/AM</fullName>
                </value>
                <value>
                    <fullName>Ready for Implementations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Capture__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Capture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdateRevisionAction__c</fullName>
        <formula>IF(AND(ISPICKVAL(Revision_Record_Status__c,&apos;Initiated/In Progress&apos;),CreatedUserProfile__c=loggedProfile__c),&apos;Yes&apos;,
IF(AND(ISPICKVAL(Revision_Record_Status__c,&apos;Pending Response From Sales/AM&apos;),loggedProfile__c=&apos;Sales&apos;),&apos;Yes&apos;,
IF(AND(ISPICKVAL(Revision_Record_Status__c,&apos;Ready for Implementations&apos;),loggedProfile__c=&apos;Imps&apos;),&apos;Yes&apos;,&apos;No&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UpdateRevisionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loggedProfile__c</fullName>
        <formula>IF(OR(Contains($User.ProfileName__c,&apos;Sales&apos;),Contains($User.ProfileName__c,&apos;Specialty&apos;)),&apos;Sales&apos; ,IF(Contains($User.ProfileName__c,&apos;Implementations&apos;),&apos;Imps&apos;,&apos;Others&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedProfile</label>
        <type>Text</type>
    </fields>
    <label>Revision</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Revision ID #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revisions</pluralLabel>
    <recordTypes>
        <fullName>Rev_Implementer</fullName>
        <active>true</active>
        <description>this Rt is only asigned to Implementer</description>
        <label>Rev_Implementer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revision</fullName>
        <active>true</active>
        <label>Revision</label>
    </recordTypes>
    <recordTypes>
        <fullName>Revision_Lock</fullName>
        <active>true</active>
        <label>Revision Lock</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_And_Imp_Lock</fullName>
        <active>true</active>
        <label>Sales And Imp Lock</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Revision_VR01_RevisionRecordStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Revision_Record_Status__c, &apos;Denied&apos;),ISPICKVAL(Revision_Record_Status__c, &apos;Pending Response From Sales/AM&apos;)), ISBLANK(Comments__c))</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please Provide the Comments.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revision_VR02_ReturnReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Revision_Record_Status__c, &apos;Denied&apos;),ISPICKVAL(Revision_Record_Status__c, &apos;Pending Response From Sales/AM&apos;)), ISBLANK(TEXT(Return_Reason__c)))</errorConditionFormula>
        <errorDisplayField>Return_Reason__c</errorDisplayField>
        <errorMessage>Please Provide the Return Reason.</errorMessage>
    </validationRules>
</CustomObject>